force-app/main/default/objects/Bridge_Finding__c/Bridge_Finding__c.object-meta.xml
<!--
    Findings sink for the bridge spike.

    The CMS editor unmounts the picker the moment assetselected fires, taking any in-component
    diagnostics with it. Writing them to a record makes them outlive the modal — and makes them
    queryable from the CLI rather than copy-pasted out of a UI that is closing.
-->
<CustomObject>
    <description>Diagnostic output from the Aprimo selector bridge spike.</description>
    <!-- Sharing, Bulk API, and Streaming API must all be enabled or all disabled together. -->
    <label>Bridge Finding</label>
    <nameField>
        <displayFormat>BF-{00000}</displayFormat>
        <label>Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bridge Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>