force-app/main/default/objects/Bridge_Finding__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>